# ruspell

./: .travis.yml  Cargo.toml  Dockerfile  README.md
conf/: config-fr_idf.yml
params/: param-fr_idf.yml
src/: bano_reader.rs  conf.rs  errors.rs  ispell_wrapper.rs  main.rs  param.rs  records_reader.rs  regex_processor.rs  regex_wrapper.rs  utils.rs  worker.rs
src/worker/: bano_reader.rs  ispell_wrapper.rs  mod.rs  regex_processor.rs
src/workers/: bano_reader.rs  ispell_wrapper.rs  regex_processor.rs  worker.rs
tests/: fr-idf.sh
tests/data/: empty.hash
tests/data/bano/: stops_osm.csv
tests/data/conf/: config-fr_idf.yml
