[package]
name = "ruspell"
version = "0.1.0"
authors = ["Navitia <navitia@kisio.org>"]
description = "Spell-checker for transportation data."

[dependencies]
ispell = { git = "https://github.com/pbougue/rust-ispell", branch = "patch_check", version = "0.3.0" }
structopt = "0.0.3"
structopt-derive = "0.0.3"
csv = "0.15"
rustc-serialize = "0.3"
encoding = "0.2"
regex = "0.2"
lazy_static = "0.2"
unicode-normalization = "0.1.0"
