[package]
name = "ruspell"
version = "0.1.0"
authors = ["Navitia <navitia@kisio.org>"]
description = "Spell-checker for transportation data."

[dependencies]
ispell = { git = "https://github.com/lise-henry/rust-ispell", rev = "e7933097aba283d51f2d373c59a781e4ccca24eb" }
structopt = "0.0.3"
structopt-derive = "0.0.3"
csv = "0.15"
rustc-serialize = "0.3"
encoding = "0.2"
regex = "0.2"
unicode-normalization = "0.1.0"
error-chain = "0.10"
serde = "0.9"
serde_derive = "0.9"
serde_yaml = "0.6"
